--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
+    <link rel="manifest" href="site.webmanifest" />
     <meta name="description" content="1ВТЬ-1" />
 
     <!-- fonts -->
@@ -18,7 +18,7 @@
 
 
     <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="assets/vendors/bootstrap-select/bootstrap-select.min.css" />
+    <link rel="stylesheet" href="bootstrap-select.min.css" />
     <link rel="stylesheet" href="jquery-ui.css" />
     <link rel="stylesheet" href="animate.min.css" />
     <link rel="stylesheet" href="all.min.css" />
@@ -325,28 +325,28 @@
     <!-- back-to-top-end -->
 
 
-    <script src="assets/vendors/jquery/jquery-3.5.1.min.js"></script>
-    <script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendors/bootstrap-select/bootstrap-select.min.js"></script>
-    <script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-    <script src="assets/vendors/jarallax/jarallax.min.js"></script>
-    <script src="assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
-    <script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
-    <script src="assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
-    <script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-    <script src="assets/vendors/jquery-validate/jquery.validate.min.js"></script>
-    <script src="assets/vendors/nouislider/nouislider.min.js"></script>
-    <script src="assets/vendors/odometer/odometer.min.js"></script>
-    <script src="assets/vendors/tiny-slider/tiny-slider.min.js"></script>
-    <script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-    <script src="assets/vendors/wnumb/wNumb.min.js"></script>
-    <script src="assets/vendors/jquery-circleType/jquery.circleType.js"></script>
-    <script src="assets/vendors/jquery-lettering/jquery.lettering.min.js"></script>
-    <script src="assets/vendors/wow/wow.js"></script>
-    <script src="assets/vendors/isotope/isotope.js"></script>
-    <script src="assets/vendors/countdown/countdown.min.js"></script>
+    <script src="jquery-3.5.1.min.js"></script>
+    <script src="bootstrap.bundle.min.js"></script>
+    <script src="bootstrap-select.min.js"></script>
+    <script src="jquery-ui.js"></script>
+    <script src="jarallax.min.js"></script>
+    <script src="jquery.ajaxchimp.min.js"></script>
+    <script src="jquery.appear.min.js"></script>
+    <script src="jquery.circle-progress.min.js"></script>
+    <script src="jquery.magnific-popup.min.js"></script>
+    <script src="jquery.validate.min.js"></script>
+    <script src="nouislider.min.js"></script>
+    <script src="odometer.min.js"></script>
+    <script src="tiny-slider.min.js"></script>
+    <script src="owl.carousel.min.js"></script>
+    <script src="wNumb.min.js"></script>
+    <script src="jquery.circleType.js"></script>
+    <script src="jquery.lettering.min.js"></script>
+    <script src="wow.js"></script>
+    <script src="isotope.js"></script>
+    <script src="countdown.min.js"></script>
     <!-- template js -->
-    <script src="assets/js/ogency.js"></script>
+    <script src="ogency.js"></script>
 </body>
 
 </html>
