--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,200;1,300;1,400;1,500;1,600;1,700;1,800&display=swap" rel="stylesheet" />
 
 
-    <link rel="stylesheet" href="bootstrap.min.css" />
-    <link rel="stylesheet" href="bootstrap-select.min.css" />
-    <link rel="stylesheet" href="jquery-ui.css" />
-    <link rel="stylesheet" href="animate.min.css" />
-    <link rel="stylesheet" href="all.min.css" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="jarallax.css" />
-    <link rel="stylesheet" href="jquery.magnific-popup.css" />
-    <link rel="stylesheet" href="nouislider.min.css" />
-    <link rel="stylesheet" href="nouislider.pips.css" />
-    <link rel="stylesheet" href="odometer.min.css" />
-    <link rel="stylesheet" href="tiny-slider.min.css" />
-    <link rel="stylesheet" href="owl.carousel.min.css" />
-    <link rel="stylesheet" href="owl.theme.default.min.css" />
+    <link rel="stylesheet" href="../bootstrap.min.css" />
+    <link rel="stylesheet" href="../bootstrap-select.min.css" />
+    <link rel="stylesheet" href="../jquery-ui.css" />
+    <link rel="stylesheet" href="../animate.min.css" />
+    <link rel="stylesheet" href="../all.min.css" />
+    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="../jarallax.css" />
+    <link rel="stylesheet" href="../jquery.magnific-popup.css" />
+    <link rel="stylesheet" href="../nouislider.min.css" />
+    <link rel="stylesheet" href="../nouislider.pips.css" />
+    <link rel="stylesheet" href="../odometer.min.css" />
+    <link rel="stylesheet" href="../tiny-slider.min.css" />
+    <link rel="stylesheet" href="../owl.carousel.min.css" />
+    <link rel="stylesheet" href="../owl.theme.default.min.css" />
 
     <!-- template styles -->
     <link rel="stylesheet" href="assets/css/ogency.css" />
