--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>1ВТб-1 </title>
     <!-- favicons Icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
-    <link rel="manifest" href="site.webmanifest" />
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png" />
+    <link rel="manifest" href="../site.webmanifest" />
     <meta name="description" content="1ВТЬ-1" />
 
     <!-- fonts -->
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="../owl.theme.default.min.css" />
 
     <!-- template styles -->
-    <link rel="stylesheet" href="assets/css/ogency.css" />
+    <link rel="stylesheet" href="../ogency.css" />
 </head>
 
 <body class="custom-cursor">
@@ -325,28 +325,28 @@
     <!-- back-to-top-end -->
 
 
-    <script src="jquery-3.5.1.min.js"></script>
-    <script src="bootstrap.bundle.min.js"></script>
-    <script src="bootstrap-select.min.js"></script>
-    <script src="jquery-ui.js"></script>
-    <script src="jarallax.min.js"></script>
-    <script src="jquery.ajaxchimp.min.js"></script>
-    <script src="jquery.appear.min.js"></script>
-    <script src="jquery.circle-progress.min.js"></script>
-    <script src="jquery.magnific-popup.min.js"></script>
-    <script src="jquery.validate.min.js"></script>
-    <script src="nouislider.min.js"></script>
-    <script src="odometer.min.js"></script>
-    <script src="tiny-slider.min.js"></script>
-    <script src="owl.carousel.min.js"></script>
-    <script src="wNumb.min.js"></script>
-    <script src="jquery.circleType.js"></script>
-    <script src="jquery.lettering.min.js"></script>
-    <script src="wow.js"></script>
-    <script src="isotope.js"></script>
-    <script src="countdown.min.js"></script>
+    <script src="../jquery-3.5.1.min.js"></script>
+    <script src="../bootstrap.bundle.min.js"></script>
+    <script src="../bootstrap-select.min.js"></script>
+    <script src="../jquery-ui.js"></script>
+    <script src="../jarallax.min.js"></script>
+    <script src="../jquery.ajaxchimp.min.js"></script>
+    <script src="../jquery.appear.min.js"></script>
+    <script src="../jquery.circle-progress.min.js"></script>
+    <script src="../jquery.magnific-popup.min.js"></script>
+    <script src="../jquery.validate.min.js"></script>
+    <script src="../nouislider.min.js"></script>
+    <script src="../odometer.min.js"></script>
+    <script src="../tiny-slider.min.js"></script>
+    <script src="../owl.carousel.min.js"></script>
+    <script src="../wNumb.min.js"></script>
+    <script src="../jquery.circleType.js"></script>
+    <script src="../jquery.lettering.min.js"></script>
+    <script src="../wow.js"></script>
+    <script src="../isotope.js"></script>
+    <script src="../countdown.min.js"></script>
     <!-- template js -->
-    <script src="ogency.js"></script>
+    <script src="../ogency.js"></script>
 </body>
 
 </html>
